# resto-pos

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml
demo/: index.html
docs/: architecture.md
docs/adr/: ADR-001-flask-over-tkinter.md  ADR-002-sqlite-over-mysql.md
legacy/: README.md
src/: __init__.py  config.py  models.py  routes.py  seed_data.py  services.py
static/css/: style.css
static/js/: app.js
templates/: base.html  customer_form.html  dashboard.html  login.html  order.html  orders.html  payment.html  receipt.html
tests/: __init__.py  conftest.py  test_models.py  test_routes.py  test_services.py
