[project]
name = "resto-pos"
version = "1.0.0"
description = "Full-stack Restaurant Point of Sale - Flask web app reengineered from Tkinter"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anuroop Ashok Shivdasan", email = "shivandru@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/lAteralthInklAbs/resto-pos"
Demo = "https://lateralthinklabs.github.io/resto-pos/"
Repository = "https://github.com/lAteralthInklAbs/resto-pos.git"
Issues = "https://github.com/lAteralthInklAbs/resto-pos/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
